<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Management</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">My Management</string>
    <string name="username">User Name</string>
    <string name="Location">Location</string>
    <string name="Type">Type</string>
    <string name="Picture">Picture</string>
    <string name="snap">Take Snap</string>
    <string name="save">SAVE</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="update">Update</string>
    <string name="nTYpe">Take New Snap</string>
    <string name="add">+</string>
    <string name="delete">Delete</string>
        <string-array name="country_arrays">
       <item>Alabama</item>
       <item>Alaska</item>
       <item>Arizona</item>
       <item>Arkansas</item>
       <item>California</item>
       <item>Colorado</item>
       <item>Connecticut</item>
       <item>Delaware</item>
       <item>District of Columbia</item>
       <item>Florida</item>
       <item>Georgia</item>
       <item>Hawaii</item>
       <item>Idaho</item>
       <item>Illinois</item>
       <item>Indiana</item>
       <item>Iowa</item>
       <item>Kansas</item>
       <item>Kentucky</item>
       <item>Louisiana</item><item>Maine</item><item>Maryland</item><item>Massachusetts</item><item>Michigan</item><item>Minnesota</item><item>Mississippi</item><item>Missouri</item><item>Montana</item><item>Nebraska</item><item>Nevada</item><item>New Hampshire</item><item>New Jersey</item><item>New Mexico</item><item>New York</item><item>North Carolina</item><item>North Dakota</item><item>Ohio</item><item>Oklahoma</item><item>Oregon</item><item>Pennsylvania</item><item>Rhode Island</item><item>South Carolina</item><item>South Dakota</item><item>Tennessee</item><item>Texas</item><item>Utah</item><item>Vermont</item><item>Virginia</item><item>Washington</item><item>West Virginia</item><item>Wisconsin</item><item>Wyoming</item>

    </string-array>
        <string name="Country">Enter Country</string>
        <string name="City">Enter City</string>
        <string name="desc">Enter Details</string>
</resources>